--- a/nav.html
+++ b/nav.html
@@ -177,8 +177,10 @@
     }
   }
   document.addEventListener("keyup", function(e) {
+ 
     href = hash[e.key] || "";
-    if (!href) return;
+    if (!href||!e.ctrlKey) return;
+    console.log(e.ctrlKey)
     console.log(href);
     open("http://www." + href, "_blank");
   })
