--- a/nav.html
+++ b/nav.html
@@ -154,6 +154,9 @@
     border-radius: 4px;
     border: none;
   }
+  .wrap div img[src=""] {
+    opacity: 0;
+  }
   </style>
   <link rel="stylesheet" type="sweetalert-master/src/sweetalert.css" href="dist/sweetalert.css">
 </head>
