--- a/nav.html
+++ b/nav.html
@@ -69,11 +69,11 @@
   }
 
   main {
-    padding-top: 50px;
+    padding-top: 150px;
     background-position: center center;
     background-size: cover;
     background: url(mask.jpg);
-    height: 100vh;
+    height: 71vh;
   }
 
   .wrap {
@@ -148,8 +148,11 @@
   div.wrap {
     background: rgba(255,255,255,0.8);
     padding: 20px 0;
-    margin:20px 230px;
-    border-radius: 50px;
+    margin:20px auto;
+    border-radius: 30px;
+    max-width: 740px;
+
+
   }
 
   .wrap div img {
