--- a/nav.html
+++ b/nav.html
@@ -72,7 +72,7 @@
     padding-top: 150px;
     background-position: center center;
     background-size: cover;
-    background: url(mask.jpg);
+    background: #fff url(mask.jpg);
     height: 71vh;
   }
 
