--- a/nav.html
+++ b/nav.html
@@ -195,7 +195,7 @@
   </main>
   <footer></footer>
   <script src="./sweetalert-master/docs/assets/sweetalert/sweetalert.min.js"></script>
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+  <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
   <script src="main.js"></script>
   <!--  <script type="text/javascript">
   var href;
