去除滚动条

--- a/nav.html
+++ b/nav.html
@@ -20,6 +20,9 @@
   }
 
   header {
+    position: fixed;
+    left: 0;
+    right: 0;
     text-align: center;
     padding: 29px 40px;
     background: rgba(0, 0, 0, 0.9);
@@ -69,18 +72,17 @@
   }
 
   main {
-    padding-top: 150px;
-    background-position: center center;
+    padding-top: 20%;
     background-size: auto 100%;
     background-position: center 0;
     background-image: url(mask.jpg);
     height: 100vh;
     background-repeat: no-repeat;
+    box-sizing: border-box;
   }
 
   .wrap {
     text-align: center;
-    margin-bottom: 300px;
   }
 
   .wrap kbd {
@@ -150,7 +152,7 @@
   div.wrap {
     background: rgba(255, 255, 255, 0.8);
     padding: 20px 0;
-    margin: 20px auto;
+    margin: 0 auto;
     border-radius: 30px;
     max-width: 740px;
   }
