--- a/nav.html
+++ b/nav.html
@@ -20,7 +20,7 @@
   }
 
   html {
-    background-size: auto 100%;
+    background-size: cover;
     background-position: center 0;
     background-image: url(mask.jpg);
     background-repeat: no-repeat;
