--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   html {
     background-size: cover;
     background-position: center 0;
-    background-image: url(http://p4oyo8ulj.bkt.clouddn.com/maskaa.jpg);
+    background-image: url(https://w.wallhaven.cc/full/ox/wallhaven-oxv6gl.png);
     background-repeat: no-repeat;
   }
 
